--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css" />
     <title>Starbucks Coffee Korea</title>
   </head>
-  <script src="./js/index.js" defer />
-  <body></body>
+  <body>
+    <script src="./js/index.js" defer />
+  </body>
 </html>
