선택항목 추가

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -41,7 +41,7 @@
           </nav>
         </div>
       </div>
-
+      <!-- 선택항목 -->
       <div class="sub">
         <div class="sub-inner">
           <h2 id="title">Drink</h2>
