modified images and html

--- a/pages/gift/gift_thermos.html
+++ b/pages/gift/gift_thermos.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>gift_thermos</title>
-  <link rel="stylesheet" href="gift.css">
+  <title>/gift_thermos</title>
+  <link rel="stylesheet" href="/css/gift.css">
   <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -53,34 +53,34 @@
       <h2 class="items__title">보온병</h2>
       <div class="item__container">
         <div class="item">
-          <img src="gift/thermos_img/5_1.jpg" alt="" class="item__img">
+          <img src="/gift/thermos_img/5_1.jpg" alt="" class="item__img">
           <span>레드 리유저블 컵 세트</span>
           <div class="new_and_limited">
-            <img src="gift/new.png" alt="">
-            <img src="gift/limited.png" alt="">
+            <img src="/gift/new.png" alt="">
+            <img src="/gift/limited.png" alt="">
           </div>
         </div>
         <div class="item">
-          <img src="gift/thermos_img/5_2.jpg" alt="" class="item__img">
+          <img src="/gift/thermos_img/5_2.jpg" alt="" class="item__img">
           <span>레드 리유저블 컵 세트</span>
           <div class="new_and_limited">
-            <img src="gift/new.png" alt="">
-            <img src="gift/limited.png" alt="">
+            <img src="/gift/new.png" alt="">
+            <img src="/gift/limited.png" alt="">
           </div>
         </div>
         <div class="item">
-          <img src="gift/thermos_img/5_3.jpg" alt="" class="item__img">
+          <img src="/gift/thermos_img/5_3.jpg" alt="" class="item__img">
           <span>레드 리유저블 컵 세트</span>
           <div class="new_and_limited">
-            <img src="gift/new.png" alt="">
-            <img src="gift/limited.png" alt="">
+            <img src="/gift/new.png" alt="">
+            <img src="/gift/limited.png" alt="">
           </div>
           <div class="item">
-            <img src="gift/thermos_img/5_3.jpg" alt="" class="item__img">
+            <img src="/gift/thermos_img/5_3.jpg" alt="" class="item__img">
             <span>레드 리유저블 컵 세트</span>
             <div class="new_and_limited">
-              <img src="gift/new.png" alt="">
-              <img src="gift/limited.png" alt="">
+              <img src="/gift/new.png" alt="">
+              <img src="/gift/limited.png" alt="">
             </div>
         </div>
       </div>
@@ -93,44 +93,44 @@
   <h2 class="items__title">보온병</h2>
   <div class="item__container">
     <div class="item">
-      <img src="gift/thermos_img/5_1.jpg" alt="" class="item__img">
-      <span>레드 리유저블 컵 세트</span>
+      <img src="/gift/thermos_img/5_1.jpg" alt="" class="item__img">
+      <span>SS 마레 스탠리 베이츠 보온병 473ml</span>
       <div class="new_and_limited">
-        <img src="gift/new.png" alt="">
-        <img src="gift/limited.png" alt="">
+        <img src="/gift/new.png" alt="">
+        <img src="/gift/limited.png" alt="">
       </div>
     </div>
     <div class="item">
-      <img src="gift/thermos_img/5_2.jpg" alt="" class="item__img">
-      <span>언더더씨 워터볼 텀블러 355ml</span>
+      <img src="/gift/thermos_img/5_2.jpg" alt="" class="item__img">
+      <span>SS 마레 스탠리 통가 보온병 710ml</span>
       <div class="new_and_limited">
-        <img src="gift/new.png" alt="">
-        <img src="gift/limited.png" alt="">
+        <img src="/gift/new.png" alt="">
+        <img src="/gift/limited.png" alt="">
       </div>
     </div>
     <div class="item">
-      <img src="gift/thermos_img/5_3.jpg" alt="" class="item__img">
-      <span>마레 DW 컬러체인징 텀블러 473ml</span>
+      <img src="/gift/thermos_img/5_3.jpg" alt="" class="item__img">
+      <span>SS 마레 스탠리 푸드 자 414ml</span>
       <div class="new_and_limited">
-        <img src="gift/new.png" alt="">
-        <img src="gift/limited.png" alt="">
+        <img src="/gift/new.png" alt="">
+        <img src="/gift/limited.png" alt="">
       </div>
     </div>
     <div class="item">
-      <img src="gift/thermos_img/4_23.jpg" alt="" class="item__img">
-      <span>마레 DW 컬러체인징 텀블러 473ml</span>
+      <img src="/gift/thermos_img/5_4.jpg" alt="" class="item__img">
+      <span>JMZ 그린 사이렌 보온병 350ml</span>
     </div>
     <div class="item">
-      <img src="gift/thermos_img/5_5.jpg" alt="" class="item__img">
-      <span>마레 DW 컬러체인징 텀블러 473ml</span>
+      <img src="/gift/thermos_img/5_5.jpg" alt="" class="item__img">
+      <span>JNL 어뮤즈먼트 파크 보온병 500ml</span>
     </div>
     <div class="item">
-      <img src="gift/thermos_img/3_12.jpg" alt="" class="item__img">
-      <span>마레 DW 컬러체인징 텀블러 473ml</span>
+      <img src="/gift/thermos_img/5_6.jpg" alt="" class="item__img">
+      <span>JNO 마블 화이트 보온병 500ml</span>
     </div>
     <div class="item">
-      <img src="gift/thermos_img/5_7.jpg" alt="" class="item__img">
-      <span>마레 DW 컬러체인징 텀블러 473ml</span>
+      <img src="/gift/thermos_img/5_7.jpg" alt="" class="item__img">
+      <span>SS 블랙 앤 골드 스탠리 보온병 500ml</span>
     </div>
   </div>
 </section>
