--- a/pages/gift/gift_coffee_items.html
+++ b/pages/gift/gift_coffee_items.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>gift_coffee_items</title>
-  <link rel="stylesheet" href="gift.css">
+  <title>/gift_coffee_items</title>
+  <link rel="stylesheet" href="/css/gift.css">
   <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -52,55 +52,55 @@
       <h2 class="items__title">커피 용품</h2>
       <div class="item__container">
         <div class="item">
-          <img src="gift/coffee_items_img/6_1.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_1.jpg" alt="" class="item__img">
           <span>언더더씨 글라스 서버 600ml</span>
           <div class="new_and_limited">
-            <img src="gift/new.png" alt="">
-            <img src="gift/limited.png" alt="">
+            <img src="/gift/new.png" alt="">
+            <img src="/gift/limited.png" alt="">
           </div>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_2.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_2.jpg" alt="" class="item__img">
           <span>리저브 블랙 캐니스터</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_3.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_3.jpg" alt="" class="item__img">
           <span>리저브 블랙 캐니스터</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_4.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_4.jpg" alt="" class="item__img">
           <span>화이트 사이렌 커피 클립 스쿱</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_5.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_5.jpg" alt="" class="item__img">
           <span>SS 화이트 스타벅스 케틀</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_6.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_6.jpg" alt="" class="item__img">
           <span>리저브 블랙 푸어오버 드리퍼</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_7.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_7.jpg" alt="" class="item__img">
           <span>클래식 푸어 오버 콘 드리퍼</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_8.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_8.jpg" alt="" class="item__img">
           <span>티바나 루비 레드 티 팟 473ml</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_9.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_9.jpg" alt="" class="item__img">
           <span>티바나 펠트 그린 티 팟 473ml</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_10.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_10.jpg" alt="" class="item__img">
           <span>화이트 사이렌 그라인더</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_11.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_11.jpg" alt="" class="item__img">
           <span>밀리타 종이 필터 #2</span>
         </div>
         <div class="item">
-          <img src="gift/coffee_items_img/6_12.jpg" alt="" class="item__img">
+          <img src="/gift/coffee_items_img/6_12.jpg" alt="" class="item__img">
           <span>밀리타 종이 필터 #4</span>
         </div>
       </div>
