--- a/pages/gift/gift_glass.html
+++ b/pages/gift/gift_glass.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>gift_glass</title>
-  <link rel="stylesheet" href="gift.css">
+  <link rel="stylesheet" href="/css/gift.css">
   <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
 </head>
 <body>
