분류보기 추가

--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <title>Starbucks Coffee Korea</title>
   </head>
   <body>
+    <div class="container">
+      <div class="menu">
+        <div class="menu-inner">
+          <div class="logo">
+            <a href="../../index.html"></a>
+          </div>
+          <nav class="menu-nav">
+            <ul>
+              <li class="nav01">
+                <h2><a href="/pages/drink/drink.html">Drink</a></h2>
+              </li>
+              <li class="nav02">
+                <h2><a href="">Food</a></h2>
+              </li>
+              <li class="nav03">
+                <h2><a href="">Gift</a></h2>
+              </li>
+              <li class="nav04">
+                <h2><a href="">Card</a></h2>
+              </li>
+              <li class="nav05">
+                <h2><a href="">Menu Story</a></h2>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
     <script src="./js/index.js" defer />
   </body>
 </html>
