드링크 페이지의 분류보기 버튼클릭시 화면전환

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -80,8 +80,10 @@
           </div>
           <div id="drink_kind_check">
             <dl class="drink_kind_tabs">
-              <dt class="dt1"><a href="#" id="drink_kind_tab">카테고리</a></dt>
-              <dd>
+              <dt class="dt1">
+                <a href="#" id="drink_kind_tab" class="selected">카테고리</a>
+              </dt>
+              <dd class="dt1_content">
                 <div class="product_select_wrap">
                   <form method="post">
                     <fieldset>
@@ -185,7 +187,7 @@
                 </div>
               </dd>
               <dt class="dt2"><a href="#" id="theme_tab">테마</a></dt>
-              <dd>
+              <dd class="dt2_content">
                 <ul class="service_bn">
                   <li>
                     <a href="#"
