--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -4,17 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>/gift_mug</title>
+  <title>Gift | Starbucks Coffee Korea</title>
   <link rel="stylesheet" href="/css/gift.css">
+  <link
+  rel="shortcut icon"
+  href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828"
+  type="image/ico"
+/>
   <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
   <script defer src="/js/gift.js"></script>
 </head>
 <body>
   <div class="container">
     <div class="title">
-      <h1>기프트</h1>
+      <h1>Gift</h1>
       <span>
-        <a href="#"><i class="fas fa-home"></i></a> > <a href="#">MENU</a> > <a href="#">기프트</a>
+        <a href="#"><i class="fas fa-home"></i></a> > <a href="#">Gift</a>
       </span>
     </div>
   
@@ -883,8 +888,48 @@
           </div>
         </div>
       </li>
-      <li class="items" data-type="tea"></li>
-      <li class="items" data-type="planner"></li>
+      <li class="items" data-type="tea">
+        <h2 class="items__title">패키지 티(티바나)</h2>
+        <div class="item__container">
+          <div class="item">
+            <img src="/gift/package_tea_img/7_1.jpg" alt="" class="item__img">
+            <span>티바나 제주녹차(15개입)</span>
+          </div>
+          <div class="item" style="visibility: hidden;">
+            <img src="/gift/package_tea_img/7_1.jpg" alt="" class="item__img">
+            <span>티바나 제주녹차(15개입)</span>
+          </div>
+          <div class="item" style="visibility: hidden;">
+            <img src="/gift/package_tea_img/7_1.jpg" alt="" class="item__img">
+            <span>티바나 제주녹차(15개입)</span>
+          </div>
+          <div class="item" style="visibility: hidden;">
+            <img src="/gift/package_tea_img/7_1.jpg" alt="" class="item__img">
+            <span>티바나 제주녹차(15개입)</span>
+          </div>
+        </div>
+      </li>
+      <li class="items" data-type="planner">
+        <h2 class="items__title">스타벅스 플래너</h2>
+        <div class="item__container">
+          <div class="item" style="visibility: hidden;">
+            <img src="/gift/package_tea_img/7_1.jpg" alt="" class="item__img">
+            <span>티바나 제주녹차(15개입)</span>
+          </div>
+          <div class="item" style="visibility: hidden;">
+            <img src="/gift/package_tea_img/7_1.jpg" alt="" class="item__img">
+            <span>티바나 제주녹차(15개입)</span>
+          </div>
+          <div class="item" style="visibility: hidden;">
+            <img src="/gift/package_tea_img/7_1.jpg" alt="" class="item__img">
+            <span>티바나 제주녹차(15개입)</span>
+          </div>
+          <div class="item" style="visibility: hidden;">
+            <img src="/gift/package_tea_img/7_1.jpg" alt="" class="item__img">
+            <span>티바나 제주녹차(15개입)</span>
+          </div>
+        </div>
+      </li>
     </ul>
   </div>
 </body>
