add navbar html and css

--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -6,15 +6,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gift | Starbucks Coffee Korea</title>
   <link rel="stylesheet" href="/css/gift.css">
-  <link
-  rel="shortcut icon"
-  href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828"
-  type="image/ico"
-/>
+  <link rel="icon" type="image/png" href="/gift/logo.png">
   <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
   <script defer src="/js/gift.js"></script>
 </head>
 <body>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="navbar__logo">
+      <a href="#">
+        <img src="/gift/logo.png" alt="logo image">
+      </a>
+    </div>
+    <ul class="navbar__menu">
+      <li class="navbar__menu__item"><a href="#">Drink</a></li>
+      <li class="navbar__menu__item"><a href="#">Food</a></li>
+      <li class="navbar__menu__item"><a href="#">Gift</a></li>
+      <li class="navbar__menu__item"><a href="#">Card</a></li>
+      <li class="navbar__menu__item"><a href="#">Menu Story</a></li>
+    </ul>
+  </nav>
+  <div class="dropdown">
+    <ul>
+      <li class="dropdown__item">골드 브루 커피</li>
+      <li class="dropdown__item">브루드 커피</li>
+      <li class="dropdown__item">에스프레소</li>
+      <li class="dropdown__item">프라푸치노</li>
+      <li class="dropdown__item">블렌디드</li>
+      <li class="dropdown__item">스타벅스 피지오</li>
+      <li class="dropdown__item">티(티바나)</li>
+      <li class="dropdown__item">기타 제조 음료</li>
+      <li class="dropdown__item">스타벅스 주스(병음료)</li>
+    </ul>
+  </div>
+
+  <!-- Content -->
   <div class="container">
     <div class="title">
       <h1>Gift</h1>
