--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -50,24 +50,28 @@
     </div>
   
     <section class="search">
-      <h2>분류 보기</h2>
-      <div class="search__btn">
-        <button class="active category">카테고리</button>
-        <button class="theme">테마</button>
+      <div class="search__titleAndMorebtn">
+        <h2>분류 보기</h2>
+        <button class="search__upBtn"><i class="fas fa-chevron-up"></i></button>
       </div>
-      <div class="search__checkbox">
-        <button class="checked" data-filter="*">전체 상품보기</button>
-        <button data-filter="mug">머그</button>
-        <button data-filter="glass">글라스</button>
-        <button data-filter="plastic">플라스틱텀블러</button>
-        <button data-filter="stainless">스테인리스 텀블러</button>
-        <button data-filter="thermos">보온병</button>
-        <button data-filter="accessories">엑세서리</button>
-        <button data-filter="coffee_items">커피 용품</button>
-        <button data-filter="tea">패키지 티(티바나)</button>
-        <button data-filter="planner">스타벅스 플래너</button>
+      <div class="search__container">
+        <div class="search__btn">
+          <button class="active category">카테고리</button>
+          <button class="theme">테마</button>
+        </div>
+        <div class="search__checkbox">
+          <button class="checked" data-filter="*">전체 상품보기</button>
+          <button data-filter="mug">머그</button>
+          <button data-filter="glass">글라스</button>
+          <button data-filter="plastic">플라스틱텀블러</button>
+          <button data-filter="stainless">스테인리스 텀블러</button>
+          <button data-filter="thermos">보온병</button>
+          <button data-filter="accessories">엑세서리</button>
+          <button data-filter="coffee_items">커피 용품</button>
+          <button data-filter="tea">패키지 티(티바나)</button>
+          <button data-filter="planner">스타벅스 플래너</button>
+        </div>
       </div>
-      <button class="search__moreBtn"><i class="fas fa-chevron-up"></i></button>
     </section>
 
 
