--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -29,7 +29,7 @@
                 <h2><a href="">Food</a></h2>
               </li>
               <li class="nav03">
-                <h2><a href="">Gift</a></h2>
+                <h2><a href="../gift/gift.html">Gift</a></h2>
               </li>
               <li class="nav04">
                 <h2><a href="">Card</a></h2>
@@ -201,8 +201,122 @@
             </dl>
           </div>
         </div>
+        <div class="categoryList">categoryList</div>
+        <div class="themeList">themeList</div>
       </div>
-      <footer class="footer">Footer</footer>
+      <!-- footer 부분 -->
+      <footer id="footer">
+        <div class="footer_wrap">
+          <div class="footer_menus">
+            <ul>
+              <li class="footer_menus_title"><a href="#">company</a></li>
+              <li><a href="#">한눈에 보기</a></li>
+              <li><a href="#">스타벅스 사명</a></li>
+              <li><a href="#">스타벅스 소개</a></li>
+              <li><a href="#">국제 뉴스룸</a></li>
+              <li><a href="#">세계의 스타벅스</a></li>
+              <li><a href="#">글로벌 뉴스룸</a></li>
+            </ul>
+            <ul>
+              <li class="footer_menus_title">
+                <a href="#">corporate sales</a>
+              </li>
+              <li><a href="#">단체 및 기업 구매 안내</a></li>
+            </ul>
+            <ul>
+              <li class="footer_menus_title"><a href="#">partnership</a></li>
+              <li><a href="#">신규 입점 제의</a></li>
+              <li><a href="#">협력 고객사 등록신청</a></li>
+            </ul>
+            <ul>
+              <li class="footer_menus_title">
+                <a href="">online community</a>
+              </li>
+              <li><a href="#">페이스북</a></li>
+              <li><a href="#">트위터</a></li>
+              <li><a href="#">유튜브</a></li>
+              <li><a href="#">블로그</a></li>
+              <li><a href="#">인스타그램</a></li>
+            </ul>
+            <ul>
+              <li class="footer_menus_title"><a href="#">recruit</a></li>
+              <li><a href="#">채용 소개</a></li>
+              <li><a href="#">채용 지원하기</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer_award">
+          <div class="footer_award_inner">
+            <ul class="footer_award_slider">
+              <li>
+                <a href="#"
+                  ><img
+                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_01.jpg"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_02.jpg"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_03.jpg"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_04.jpg"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_05.jpg"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_06.jpg"
+                    alt=""
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright">
+          <a class="first" href="#">개인정보처리방침 </a>
+          <a href="#">영상정보처리기기 운영관리 방침</a>
+          <a href="#">홈페이지 이용약관</a>
+          <a href="#">위치정보 이용약관</a>
+          <a href="#">스타벅스 카드 이용약관</a>
+          <a href="#">비회원 이용약관</a>
+          <a href="#">My DT Pass 서비스 이용약관</a>
+          <a href="#">윤리경영 핫라인</a>
+          <br />
+          <a class="btn_link" href="#">찾아오시는 길</a>
+          <a class="btn_link" href="#">신규입점제의</a>
+          <a class="btn_link" href="#">사이트 맵</a>
+          <ul class="copy_menu">
+            <li>사업자등록번호 : 201-81-21515</li>
+            <li>(주)스타벅스커피 코리아 대표이사 : 송 데이비드 호섭</li>
+            <li>TEL : 1522-3232</li>
+            <li>개인정보 책임자 : 하익성</li>
+          </ul>
+          <span class="copy"
+            >ⓒ 2021 Starbucks Coffee Company. All Rights Reserved.</span
+          >
+        </div>
+      </footer>
     </div>
     <script src="/js/drink.js" defer></script>
   </body>
