index, drink, gift 링크 연결

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <nav class="menu-nav">
             <ul>
               <li class="nav01">
-                <h2><a href="/pages/drink/drink.html">Drink</a></h2>
+                <h2><a href="/pages/drink/drink.html"">Drink</a></h2>
               </li>
               <li class="nav02">
                 <h2><a href="">Food</a></h2>
               </li>
               <li class="nav03">
-                <h2><a href="">Gift</a></h2>
+                <h2><a href="/pages/gift/gift.html">Gift</a></h2>
               </li>
               <li class="nav04">
                 <h2><a href="">Card</a></h2>
