--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gift | Starbucks Coffee Korea</title>
-    <link rel="stylesheet" href="/css/gift.css" />
+    <link rel="stylesheet" href="../../css/gift.css" />
     <link
       rel="shortcut icon"
       href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828"
@@ -15,13 +15,13 @@
       src="https://kit.fontawesome.com/7a4cfa35a1.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="/js/gift.js"></script>
+    <script defer src="../../js/gift.js"></script>
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar">
       <div class="navbar__logo">
-        <a href="/index.html">
+        <a href="../../index.html">
           <img
             src="https://www.starbucks.co.kr/common/img/common/logo.png"
             alt="logo image"
