--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <div class="menu">
         <div class="menu-inner">
           <div class="logo">
-            <a href="../../index.html"></a>
+            <a href="index.html"></a>
           </div>
           <nav class="menu-nav">
             <ul>
               <li class="nav01">
-                <h2><a href="/pages/drink/drink.html"">Drink</a></h2>
+                <h2><a href="./pages/drink/drink.html"">Drink</a></h2>
               </li>
               <li class="nav02">
                 <h2><a href="">Food</a></h2>
