--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2><a href="">Food</a></h2>
               </li>
               <li class="nav03">
-                <h2><a href="/pages/gift/gift.html">Gift</a></h2>
+                <h2><a href="./pages/gift/gift.html">Gift</a></h2>
               </li>
               <li class="nav04">
                 <h2><a href="">Card</a></h2>
