--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -93,208 +93,208 @@
           <h2 class="items__title">머그</h2>
           <div class="item__container">
             <div class="item">
-              <img src="/gift/mug_img/1.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/1.jpg" alt="" class="item__img" />
               <div class="new_and_limited"></div>
               <span>21 서머 마레 머그 355ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/2.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/2.jpg" alt="" class="item__img" />
               <span>21 서머 테일 머그 355ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/3.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/3.jpg" alt="" class="item__img" />
               <span>3.1 필립림 레인포레스트 머그 355ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/4.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/4.jpg" alt="" class="item__img" />
               <span>3.1 필립림 코랄 머그 355ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/5.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/5.jpg" alt="" class="item__img" />
               <span>SS 마레 스탠리 듀 컵 세트 355ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/6.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/6.jpg" alt="" class="item__img" />
               <span>고슴도치 스푼 머그 296ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/7.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/7.jpg" alt="" class="item__img" />
               <span>SS 리저브 커피 블랙 더블월 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/8.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/8.jpg" alt="" class="item__img" />
               <span>경주 투어 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/9.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/9.jpg" alt="" class="item__img" />
               <span>그린 사이렌 클래식 머그 237ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/10.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/10.jpg" alt="" class="item__img" />
               <span>그린 사이렌 클래식 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/11.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/11.jpg" alt="" class="item__img" />
               <span>그린 사이렌 클래식 머그 473ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/12.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/12.jpg" alt="" class="item__img" />
               <span>리얼 광주 데미머그 89ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/13.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/13.jpg" alt="" class="item__img" />
               <span>리얼 대구 데미머그 89ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/14.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/14.jpg" alt="" class="item__img" />
               <span>리얼 대전 데미머그 89ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/15.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/15.jpg" alt="" class="item__img" />
               <span>리얼 대전 머그 414ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/16.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/16.jpg" alt="" class="item__img" />
               <span>리저브 뉴블랙 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/17.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/17.jpg" alt="" class="item__img" />
               <span>리저브 블랙 DW 머그 296ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/18.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/18.jpg" alt="" class="item__img" />
               <span>리저브 화이트 DW 머그 296ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/19.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/19.jpg" alt="" class="item__img" />
               <span>부산 투어 머그 355ml</span>
             </div>
             <div class="item" class="item__img">
-              <img src="/gift/mug_img/20.jpg" alt="" />
+              <img src="../../gift/mug_img/20.jpg" alt="" />
               <span>북청사자놀음 데미머그 89ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/21.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/21.jpg" alt="" class="item__img" />
               <span>북청사자놀음 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/22.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/22.jpg" alt="" class="item__img" />
               <span>블랙 링 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/23.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/23.jpg" alt="" class="item__img" />
               <span>블랙 앤 골드 머그 473ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/24.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/24.jpg" alt="" class="item__img" />
               <span>빈 데어 코리아 데미머그 59ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/25.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/25.jpg" alt="" class="item__img" />
               <span>빈 데어 코리아 머그 414ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/26.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/26.jpg" alt="" class="item__img" />
               <span>서울 제주 데미머그 세트</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/27.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/27.jpg" alt="" class="item__img" />
               <span>서울 투어 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/28.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/28.jpg" alt="" class="item__img" />
               <span>스타벅스 1호점 뱃지 머그 414ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/29.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/29.jpg" alt="" class="item__img" />
               <span>스타벅스 1호점 스퀘어 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/30.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/30.jpg" alt="" class="item__img" />
               <span>스타벅스 현대카드 슬리브 머그 340ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/31.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/31.jpg" alt="" class="item__img" />
               <span>어뮤즈먼트 파크 좌표 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/32.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/32.jpg" alt="" class="item__img" />
               <span>어뮤즈먼트 파크 컬러 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/33.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/33.jpg" alt="" class="item__img" />
               <span>우리 한글 블랙 머그 473ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/34.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/34.jpg" alt="" class="item__img" />
               <span>우리 한글 화이트 머그 473ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/35.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/35.jpg" alt="" class="item__img" />
               <span>우리나라 도자 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/36.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/36.jpg" alt="" class="item__img" />
               <span>인천 투어 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/37.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/37.jpg" alt="" class="item__img" />
               <span>제주 에코컵 세트</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/38.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/38.jpg" alt="" class="item__img" />
               <span>제주 투어 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/39.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/39.jpg" alt="" class="item__img" />
               <span>코리아 데미머그 세트(4개입)</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/40.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/40.jpg" alt="" class="item__img" />
               <span>티바나 그린 리드 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/41.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/41.jpg" alt="" class="item__img" />
               <span>티바나 포터 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/42.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/42.jpg" alt="" class="item__img" />
               <span>티바나 핑크 리드 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/43.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/43.jpg" alt="" class="item__img" />
               <span>해운대 엑스더스카이 머그 340ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/44.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/44.jpg" alt="" class="item__img" />
               <span>환구단 스퀘어 머그 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/mug_img/45.jpg" alt="" class="item__img" />
+              <img src="../../gift/mug_img/45.jpg" alt="" class="item__img" />
               <span>어뮤즈먼트 파크 시온 글라스 머그 470ml</span>
             </div>
           </div>
@@ -303,74 +303,126 @@
           <h2 class="items__title">글라스</h2>
           <div class="item__container">
             <div class="item">
-              <img src="/gift/glass_img/2_1.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_1.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>21 서머 고블렛 글라스 355ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_2.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_2.jpg"
+                alt=""
+                class="item__img"
+              />
               <div class="new_and_limited"></div>
               <span>21 서머 글리터 핸들 글라스 355ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_3.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_3.jpg"
+                alt=""
+                class="item__img"
+              />
               <div class="new_and_limited"></div>
               <span>21 서머 해마 글라스 473ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_4.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_4.jpg"
+                alt=""
+                class="item__img"
+              />
               <div class="new_and_limited"></div>
               <span>고슴도치 머들러 글라스 355ml</span>
               <div class="new_and_limited">
-                <img src="/gift/new.png" alt="" />
-                <img src="/gift/limited.png" alt="" />
+                <img src="../../gift/new.png" alt="" />
+                <img src="../../gift/limited.png" alt="" />
               </div>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_5.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_5.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>스타벅스 현대카드 오로라 글라스 410ml</span>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_6.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_6.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>오로라 글라스 콜드컵 473ml</span>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_7.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_7.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>제주 바다 글라스 473ml</span>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_8.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_8.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>티바나 더블월 글라스 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_9.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_9.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>티바나 블루 글라스 콜드컵 473ml</span>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_10.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_10.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>티바나 핑크 글라스 콜드컵 473ml</span>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_11.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_11.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>제주 한라산 핸들 글라스 355ml</span>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_12.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_12.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>리저브 골드 핸들 글라스 473ml</span>
             </div>
             <div class="item">
-              <img src="/gift/glass_img/2_13.jpg" alt="" class="item__img" />
+              <img
+                src="../../gift/glass_img/2_13.jpg"
+                alt=""
+                class="item__img"
+              />
               <span>리저브 콜드브루 글라스 355ml</span>
             </div>
           </div>
