--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -318,6 +318,6 @@
         </div>
       </footer>
     </div>
-    <script src="/js/drink.js" defer></script>
+    <script src="../../js/drink.js" defer></script>
   </body>
 </html>
