--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="menu">
         <div class="menu-inner">
           <div class="logo">
-            <a href="index.html"></a>
+            <a href="./index.html"></a>
           </div>
           <nav class="menu-nav">
             <ul>
