--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -47,7 +47,7 @@
           <h2 id="title">Drink</h2>
           <ul class="maps">
             <li>
-              <a href="/index.html"
+              <a href="../../index.html"
                 ><img
                   src="https://image.istarbucks.co.kr/common/img/common/icon_home.png"
                   alt="home"
@@ -60,7 +60,7 @@
               />
             </li>
             <li>
-              <a href="/pages/drink/drink.html" class="map-drink">drink</a>
+              <a href="./drink.html" class="map-drink">drink</a>
             </li>
             <li></li>
             <li></li>
