drink.html와 index.html 메뉴, card.html과 링크

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -32,7 +32,7 @@
                 <h2><a href="../gift/gift.html">Gift</a></h2>
               </li>
               <li class="nav04">
-                <h2><a href="">Card</a></h2>
+                <h2><a href="../card/card.html">Card</a></h2>
               </li>
               <li class="nav05">
                 <h2><a href="">Menu Story</a></h2>
