--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h2><a href="./pages/gift/gift.html">Gift</a></h2>
               </li>
               <li class="nav04">
-                <h2><a href="">Card</a></h2>
+                <h2><a href="./pages/card/card.html">Card</a></h2>
               </li>
               <li class="nav05">
                 <h2><a href="">Menu Story</a></h2>
