index.html과 drink.html의 메뉴바를 card.html과 같게 하였습니다.

--- a/index.html
+++ b/index.html
@@ -14,33 +14,30 @@
   </head>
   <body>
     <div class="container">
-      <div class="menu">
-        <div class="menu-inner">
-          <div class="logo">
-            <a href="./index.html"></a>
+      <header class="header-layout">
+        <div class="contents-layout">
+          <div class="flex">
+            <div class="logo"><a href="index.html"></a></div>
+            <nav class="gnb">
+              <ul>
+                <a href="./pages/drink/drink.html"><li>Drink</li></a>
+                <a href="#"><li>Food</li></a>
+                <a href="./pages/gift/gift.html"><li>Gift</li></a>
+                <a href="./pages/card/card.html"><li>Card</li></a>
+                <a href="#"><li>Menu Story</li></a>
+              </ul>
+            </nav>
           </div>
-          <nav class="menu-nav">
-            <ul>
-              <li class="nav01">
-                <h2><a href="./pages/drink/drink.html"">Drink</a></h2>
-              </li>
-              <li class="nav02">
-                <h2><a href="">Food</a></h2>
-              </li>
-              <li class="nav03">
-                <h2><a href="./pages/gift/gift.html">Gift</a></h2>
-              </li>
-              <li class="nav04">
-                <h2><a href="./pages/card/card.html">Card</a></h2>
-              </li>
-              <li class="nav05">
-                <h2><a href="">Menu Story</a></h2>
-              </li>
-            </ul>
-          </nav>
         </div>
-      </div>
-      <main><h1>HOME</h1></main>
+      </header>
+      <main>
+        <h1>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+          quibusdam, corrupti ut excepturi velit, ab facilis accusantium nobis
+          sapiente quod et aut animi vel officia praesentium, possimus itaque
+          laboriosam dolor?
+        </h1>
+      </main>
       <footer id="footer">
         <div class="footer_wrap">
           <div class="footer_menus">
