--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -15,32 +15,22 @@
   <body>
     <div class="container">
       <!-- 메뉴바 -->
-      <div class="menu">
-        <div class="menu-inner">
-          <div class="logo">
-            <a href="../../index.html"></a>
+      <header class="header-layout">
+        <div class="contents-layout">
+          <div class="flex">
+            <div class="logo"><a href="../../index.html"></a></div>
+            <nav class="gnb">
+              <ul>
+                <a href="../drink/drink.html"><li>Drink</li></a>
+                <a href="#"><li>Food</li></a>
+                <a href="../gift/gift.html"><li>Gift</li></a>
+                <a href="../card/card.html"><li>Card</li></a>
+                <a href="#"><li>Menu Story</li></a>
+              </ul>
+            </nav>
           </div>
-          <nav class="menu-nav">
-            <ul>
-              <li class="nav01">
-                <h2><a href="../drink/drink.html">Drink</a></h2>
-              </li>
-              <li class="nav02">
-                <h2><a href="">Food</a></h2>
-              </li>
-              <li class="nav03">
-                <h2><a href="../gift/gift.html">Gift</a></h2>
-              </li>
-              <li class="nav04">
-                <h2><a href="../card/card.html">Card</a></h2>
-              </li>
-              <li class="nav05">
-                <h2><a href="">Menu Story</a></h2>
-              </li>
-            </ul>
-          </nav>
         </div>
-      </div>
+      </header>
       <!-- 선택항목 -->
       <div class="sub">
         <div class="sub-inner">
@@ -202,7 +192,44 @@
           </div>
         </div>
         <div class="categoryList">categoryList</div>
-        <div class="themeList">themeList</div>
+        <div class="themeList">
+          <h1>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
+            animi vitae eaque ut libero repellat accusantium explicabo harum hic
+            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
+            Corrupti.
+          </h1>
+          <h1>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
+            animi vitae eaque ut libero repellat accusantium explicabo harum hic
+            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
+            Corrupti.
+          </h1>
+          <h1>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
+            animi vitae eaque ut libero repellat accusantium explicabo harum hic
+            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
+            Corrupti.
+          </h1>
+          <h1>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
+            animi vitae eaque ut libero repellat accusantium explicabo harum hic
+            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
+            Corrupti.
+          </h1>
+          <h1>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
+            animi vitae eaque ut libero repellat accusantium explicabo harum hic
+            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
+            Corrupti.
+          </h1>
+          <h1>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
+            animi vitae eaque ut libero repellat accusantium explicabo harum hic
+            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
+            Corrupti.
+          </h1>
+        </div>
       </div>
       <!-- footer 부분 -->
       <footer id="footer">
