json에서 데이터 가져와 html에 표시

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -191,7 +191,7 @@
             </dl>
           </div>
         </div>
-        <div class="categoryList">categoryList</div>
+        <div class="categoryList"><ul class="list"></ul></div>
         <div class="themeList">
           <h1>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
