js 파일 나누기

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -191,7 +191,7 @@
             </dl>
           </div>
         </div>
-        <div class="categoryList"><ul class="list"></ul></div>
+        <div class="categoryList" id="category"><ul class="list"></ul></div>
         <div class="themeList">
           <h1>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
@@ -345,6 +345,7 @@
         </div>
       </footer>
     </div>
-    <script src="../../js/drink.js" defer></script>
+    <script src="../../js/drink/menu.js" defer></script>
+    <script src="../../js/drink/checkBoxFilter.js" defer></script>
   </body>
 </html>
