drink.html 분류 체크박스 각 항목 나오게 하기

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -87,7 +87,9 @@
                               <input
                                 type="checkbox"
                                 name="product_all"
-                                id="product_all"
+                                data-key="category"
+                                data-value="all"
+                                id="all"
                               />
                               <label for="product_all">전체 상품보기</label>
                             </li>
@@ -95,7 +97,9 @@
                               <input
                                 type="checkbox"
                                 name="product_cold_brew"
-                                id="product_cold_brew"
+                                id="coldBrew"
+                                data-key="category"
+                                data-value="coldBrew"
                               />
                               <label for="product_cold_brew"
                                 >콜드 브루 커피</label
@@ -105,23 +109,29 @@
                               <input
                                 type="checkbox"
                                 name="product_brood"
-                                id="product_brood"
+                                id="brood"
+                                data-value="brood"
+                                data-key="category"
                               />
                               <label for="product_brood">브루드 커피</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
+                                data-key="category"
+                                data-value="espresso"
                                 name="product_espresso"
-                                id="product_espresso"
+                                id="espresso"
                               />
                               <label for="product_espresso">에스프레소</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
+                                data-key="category"
+                                data-value="frappuccino"
                                 name="product_frappuccino"
-                                id="product_frappuccino"
+                                id="frappuccino"
                               />
                               <label for="product_frappuccino"
                                 >프라푸치노</label
@@ -130,40 +140,50 @@
                             <li>
                               <input
                                 type="checkbox"
+                                data-key="category"
+                                data-value="blended"
                                 name="product_blended"
-                                id="product_blended"
+                                id="blended"
                               />
                               <label for="product_blended">블렌디드</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
+                                data-key="category"
+                                data-value="fizzo"
                                 name="product_fizzo"
-                                id="product_fizzo"
+                                id="fizzo"
                               />
                               <label for="product_fizzo">스타벅스 피지오</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
+                                data-key="category"
+                                data-value="tea"
                                 name="product_tea"
-                                id="product_tea"
+                                id="tea"
                               />
                               <label for="product_tea">티 (티바나)</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
+                                data-key="category"
+                                data-value="etc"
                                 name="product_etc"
-                                id="product_etc"
+                                id="etc"
                               />
                               <label for="product_etc">기타 제조 음료</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
+                                data-key="category"
+                                data-value="juice"
                                 name="product_juice"
-                                id="product_juice"
+                                id="juice"
                               />
                               <label for="product_juice"
                                 >스타벅스 주스(병음료)</label
