json 데이터 수정 & drink.html itemlist css & drink.html 테마 페이지 추가

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -211,44 +211,50 @@
             </dl>
           </div>
         </div>
-        <div class="categoryList" id="category"><ul class="list"></ul></div>
+        <div class="categoryList" id="category">
+          <ul class="list"></ul>
+        </div>
         <div class="themeList">
-          <h1>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
-            animi vitae eaque ut libero repellat accusantium explicabo harum hic
-            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
-            Corrupti.
-          </h1>
-          <h1>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
-            animi vitae eaque ut libero repellat accusantium explicabo harum hic
-            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
-            Corrupti.
-          </h1>
-          <h1>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
-            animi vitae eaque ut libero repellat accusantium explicabo harum hic
-            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
-            Corrupti.
-          </h1>
-          <h1>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
-            animi vitae eaque ut libero repellat accusantium explicabo harum hic
-            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
-            Corrupti.
-          </h1>
-          <h1>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
-            animi vitae eaque ut libero repellat accusantium explicabo harum hic
-            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
-            Corrupti.
-          </h1>
-          <h1>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
-            animi vitae eaque ut libero repellat accusantium explicabo harum hic
-            quasi nemo, soluta ad quod, vero perferendis, modi rem adipisci!
-            Corrupti.
-          </h1>
+          <ul class="list">
+            <li class="item">
+              <div class="item_container">
+                <div class="item_content">
+                  <img
+                    src="https://image.istarbucks.co.kr/upload/store/skuimg/2021/04/[9200000003431]_20210401092933664.jpg"
+                    alt="포레스트 콜드 브루"
+                    class="item_thumbnail"
+                  />
+                </div>
+                <span class="item_description">포레스트 콜드 브루</span>
+              </div>
+            </li>
+            <li class="item">
+              <div class="item_container">
+                <div class="item_content">
+                  <img
+                    src="https://image.istarbucks.co.kr/upload/store/skuimg/2021/04/[9200000003434]_20210401093043581.jpg"
+                    alt="바나나 크림 다크 초코 블렌디드"
+                    class="item_thumbnail"
+                  />
+                </div>
+                <span class="item_description"
+                  >바나나 크림 다크 초코 블렌디드</span
+                >
+              </div>
+            </li>
+            <li class="item">
+              <div class="item_container">
+                <div class="item_content">
+                  <img
+                    src="https://image.istarbucks.co.kr/upload/store/skuimg/2021/04/[9200000003437]_20210401093131824.jpg"
+                    alt="샤이닝 머스캣 에이드"
+                    class="item_thumbnail"
+                  />
+                </div>
+                <span class="item_description">샤이닝 머스캣 에이드</span>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
       <!-- footer 부분 -->
